// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBtn.ts should not add color classes if disabled 1`] = `
<button class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary darken-2"
        type="button"
>
  <span class="v-btn__content">
  </span>
</button>
`;

exports[`VBtn.ts should not add color classes if disabled 2`] = `
<button class="v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default"
        type="button"
        disabled
>
  <span class="v-btn__content">
  </span>
</button>
`;

exports[`VBtn.ts should render component and match snapshot 1`] = `
<button class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="button"
>
  <span class="v-btn__content">
  </span>
</button>
`;

exports[`VBtn.ts should render component with color prop and match snapshot 1`] = `
<button class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default green darken-1"
        type="button"
>
  <span class="v-btn__content">
  </span>
</button>
`;

exports[`VBtn.ts should render component with color prop and match snapshot 2`] = `
<button class="v-btn v-btn--text theme--light v-size--default green--text text--darken-1"
        type="button"
>
  <span class="v-btn__content">
  </span>
</button>
`;

exports[`VBtn.ts should render component with loader slot and match snapshot 1`] = `
<button class="v-btn v-btn--is-elevated v-btn--has-bg v-btn--loading theme--light v-size--default"
        type="button"
>
  <span class="v-btn__content">
  </span>
  <span class="v-btn__loader">
    <span>
      loader
    </span>
  </span>
</button>
`;
